src/main/default/objects/Trigger_Handler__mdt/fields/Auto_Bind__c.field-meta.xml
<CustomField>
    <fullName>Auto_Bind__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If set to true, will automatically bind this class to the selected trigger events</description>
    <inlineHelpText>Recommended to set to true and allow the trigger framework to handle binding based on selected events. For legacy implementations where event binding is managed in the hander, you can set to false and use the disable/enable functionality</inlineHelpText>
    <label>Auto Bind</label>
    <type>Checkbox</type>
</CustomField>