src/main/default/objects/Trigger_Handler__mdt/fields/Before_Insert__c.field-meta.xml
<CustomField>
    <fullName>Before_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>