src/main/default/objects/Trigger_Handler__mdt/fields/Create_Exception_Event__c.field-meta.xml
<CustomField>
    <fullName>Create_Exception_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will create an Exception Platform event which can then we monitored and handled asynchronously</description>
    <inlineHelpText>Will create an Exception Platform event which can then we monitored and handled asynchronously</inlineHelpText>
    <label>Create Exception Event</label>
    <type>Checkbox</type>
</CustomField>