src/main/default/objects/Trigger_Handler__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If unchecked, this specific handler will be prevented from running. This also applies to legacy handler binding directly in master trigger.</description>
    <inlineHelpText>If unchecked, this specific handler will be prevented from running. This also applies to legacy handler binding directly in master trigger.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>