src/main/default/objects/Trigger_Handler__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <description>Determines the order which the handlers will execute on a given object.</description>
    <inlineHelpText>Determines the order which the handlers will execute on a given object.</inlineHelpText>
    <label>Execution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>