src/main/default/objects/Trigger_Handler__mdt/fields/On_Exception__c.field-meta.xml
<CustomField>
    <fullName>On_Exception__c</fullName>
    <defaultValue>&quot;Throw&quot;</defaultValue>
    <description>Determines what happens in the event the trigger handler throws an exception:

Throw: The exception will be re-thrown
Suppress: The exception will only be logged (not recommended!)
Email: An email will be sent.  MUST ALSO SET Exception Email Recipients
CustomHandler: Name of class implementing &quot;CustomExeptionHandler&quot; to run on exception</description>
    <label>On Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Throw</fullName>
                <default>true</default>
                <label>Throw</label>
            </value>
            <value>
                <fullName>Suppress</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Custom Handler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>