src/main/default/objects/Trigger_Handler__mdt/fields/On_Exception_Custom_Handler__c.field-meta.xml
<CustomField>
    <fullName>On_Exception_Custom_Handler__c</fullName>
    <description>CustomExceptionHandler class to run when an exception occurs.  &quot;On Exception&quot; must be set to &quot;Custom Handler&quot; for this to have an impact</description>
    <label>On Exception Custom Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>