src/main/default/objects/Trigger_Handler__mdt/fields/On_Exception_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>On_Exception_Email_Addresses__c</fullName>
    <description>Comma separated list of email address to notify when an exception occurs</description>
    <inlineHelpText>Comma separated list of email address to notify when an exception occurs</inlineHelpText>
    <label>On Exception Email Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>