src/main/default/objects/Trigger_Handler__mdt/fields/On_Exception_Event_Handler__c.field-meta.xml
<CustomField>
    <fullName>On_Exception_Event_Handler__c</fullName>
    <description>A handler that implements &quot;ExceptionEventHandler&quot;.  Additional Configuration can be passed in via &quot;Exception Event Handler Config&quot;</description>
    <label>On Exception Event Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>