src/main/default/objects/Trigger_Handler__mdt/fields/On_Exception_Event_Handler_Props__c.field-meta.xml
<CustomField>
    <fullName>On_Exception_Event_Handler_Props__c</fullName>
    <description>Allows allows custom state to be loaded into an ExceptionEventHandler by passing JSON Parameters that match instance properties.  Will be used to deserialize to type.</description>
    <label>On Exception Event Handler Props</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>