src/main/default/objects/Trigger_Handler__mdt/fields/Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Object__c</fullName>
    <description>The object that this handler will be bound to</description>
    <label>Trigger Object</label>
    <referenceTo>Trigger_Object__mdt</referenceTo>
    <relationshipLabel>Trigger Handlers</relationshipLabel>
    <relationshipName>Trigger_Handlers</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>